Fixed radio button placement on IE

--- a/src/lwc/portalSupportReachUsCreateNewCase/portalSupportReachUsCreateNewCase.css
+++ b/src/lwc/portalSupportReachUsCreateNewCase/portalSupportReachUsCreateNewCase.css
@@ -26,7 +26,7 @@
 .feedbackTypeBox{
     box-shadow: none;
     border-radius: 0;
-    min-height: 52px;
+    height: 52px;
     font-size: 16px;
     border: 1px solid #d3d3d3;
     background: white;
